# JumpSpark

./: LICENSE  Makefile  README.md  cookiecutter.json  pyproject.toml
hooks/: __init__.py  post_gen_project.sh
tests/: test_create_template.py
{{cookiecutter.project_name}}/: .gitignore  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: conftest.py  test_compare_dataframes.py  test_transformations.py  test_{{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py  sparksession.py  transformations.py
