[tool.poetry]
name = "spark-cookiecutter"
version = "0.1.0"
description = "Modern Pyspark Cookiecutter template with batteries loaded."
authors = ["souvik.pratiher <souvik.pratiher@databricks.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spark_cookiecutter"}]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^2.1.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
darglint = "^1.8.1"
flake8-bandit = "^4.1.1"
flake8-pytest-style = "^1.7.2"
flake8-bugbear = "^23.3.23"
flake8-docstrings = "^1.7.0"
flake8-comprehensions = "^3.11.1"
flake8-isort = "^6.0.0"
flake8-mutable = "^1.2.0"
flake8-simplify = "^0.20.0"
pep8-naming = "^0.13.3"
safety = "^2.3.5"
mypy = "^1.1.1"
pytest-cookies = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = "tests"

[tools.pytest]
norecursedirs = "{{cookiecutter.directory_name}}"